--- a/package.json
+++ b/package.json
@@ -123,10 +123,14 @@
     ]
   },
   "devDependencies": {
-    "@babel/core": "^7.21.3",
+    "@babel/core": "^7.24.0",
+    "@babel/plugin-proposal-class-properties": "^7.18.6",
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
-    "@babel/preset-env": "^7.23.3",
+    "@babel/plugin-syntax-dynamic-import": "^7.8.3",
+    "@babel/plugin-transform-react-jsx": "^7.23.4",
+    "@babel/preset-env": "^7.24.0",
     "@babel/preset-react": "^7.23.3",
+    "@babel/preset-typescript": "^7.23.3",
     "@svgr/webpack": "^6.5.1",
     "@tanstack/react-query-devtools": "^5.17.21",
     "@testing-library/react": "^14.1.2",
@@ -158,7 +162,7 @@
     "react-test-renderer": "^18.2.0",
     "sass": "^1.69.5",
     "sass-loader": "^13.2.0",
-    "ts-jest": "^29.1.1",
+    "ts-jest": "^29.1.2",
     "ts-loader": "^9.4.2",
     "ts-node": "^10.9.1",
     "url-loader": "^4.1.1",
