--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -3,4 +3,5 @@ sonar.organization=ita-social-projects
 sonar.projectName=StreetCode_Client
 sonar.projectDescription=Fronted app of Street Code project
 sonar.host.url=https://sonarcloud.io
+sonar.javascript.lcov.reportPaths=./coverage/lcov.info
 sonar.sources=src/
