--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "html-react-parser": "^3.0.12",
     "html-to-text": "^9.0.5",
     "http-status-codes": "^2.2.0",
+    "jest-canvas-mock": "^2.5.2",
     "leaflet": "^1.9.3",
     "leaflet-boundary-canvas": "^1.0.0",
     "leaflet-gesture-handling": "^1.2.2",
