--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -66,10 +66,11 @@ services:
       STREETCODE_Payment__Token: ${PAYMENT_TOKEN}
       STREETCODE_EMAILCONFIGURATION__PASSWORD: ${EMAIL_PASSWORD}
       STREETCODE_RECAPTCHA__SECRETKEY: ${RECAPTCHA_SECRET_KEY}
-      STREETCODE_CORS__AllowedOrigins: '["*"]'
-      STREETCODE_CORS__AllowedHeaders: '["*"]'
-      STREETCODE_CORS__AllowedMethods: '["*"]'
-      STREETCODE_CORS__PreflightMaxAge: 1
+      STREETCODE_CORS__AllowedOrigins: ${CORS_ALLOWED_ORIGINS}
+      STREETCODE_CORS__AllowedHeaders: ${CORS_ALLOWED_HEADERS}
+      STREETCODE_CORS__AllowedMethods: ${CORS_ALLOWED_METHODS}
+      STREETCODE_CORS__ExposedHeaders: ${CORS_EXPOSED_HEADERS}
+      STREETCODE_CORS__PreflightMaxAge: "600"
       STREETCODE_IPRATELIMITING__GENERALRULES__0__LIMIT: 500
       ASPNETCORE_ENVIRONMENT: ${SWAGGER_APP_ENVIRONMENT}
     volumes:
