--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "maplibre-gl": "^2.4.0",
     "mobx": "^6.12.0",
     "mobx-react-lite": "^3.4.0",
+    "msw": "^2.2.13",
     "quill": "^1.3.7",
     "rc-slider": "^10.1.1",
     "react": "^18.2.0",
