--- a/package.json
+++ b/package.json
@@ -138,6 +138,7 @@
     "@types/react-beautiful-dnd": "^13.1.3",
     "@types/react-google-recaptcha": "^2.1.5",
     "@types/react-helmet": "^6.1.7",
+    "@types/react-router-hash-link": "^2.4.9",
     "@types/react-slick": "^0.23.10",
     "@types/react-slider": "^1.3.1",
     "@typescript-eslint/eslint-plugin": "^5.48.0",
