--- a/package.json
+++ b/package.json
@@ -135,6 +135,7 @@
     "@types/html-to-text": "^9.0.4",
     "@types/jest": "^29.5.11",
     "@types/leaflet": "^1.9.0",
+    "@types/lodash": "^4.17.1",
     "@types/quill": "^2.0.14",
     "@types/react-beautiful-dnd": "^13.1.3",
     "@types/react-google-recaptcha": "^2.1.5",
