--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -4,6 +4,7 @@ server {
     root   /usr/share/nginx/html;
     index  index.html index.htm;
     try_files $uri $uri/ /index.html;
+    add_header Cache-Control "private, no-store, no-cache";
   }
   error_page 500 502 503 504 /50x.html;
   location = /50x.html {
